--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,4 +1,8 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-ui
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
@@ -6,10 +10,9 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-    database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
     properties:
       hibernate:
-        globally_quoted_identifiers: true
+        dialect: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
